[metadata]
name = proxy.py
version = attr: proxy.common.version.__version__
url = https://github.com/abhinavsingh/proxy.py
download_url = https://github.com/abhinavsingh/proxy.py/archive/develop.zip
description =
  ⚡⚡⚡Fast, Lightweight, Pluggable, TLS interception capable proxy
  server focused on Network monitoring, controls & Application development,
  testing, debugging.
long_description = file: README.md
long_description_content_type = text/markdown
author = Abhinav Singh
author_email = mailsforabhinav@gmail.com
license = 'BSD'
license_files =
  LICENSE.md
classifiers =
  Development Status :: 5 - Production/Stable

  Environment :: Console
  Environment :: No Input/Output (Daemon)
  Environment :: Web Environment
  Environment :: MacOS X
  Environment :: Plugins
  Environment :: Win32 (MS Windows)

  Framework :: Robot Framework
  Framework :: Robot Framework :: Library

  Intended Audience :: Developers
  Intended Audience :: Education
  Intended Audience :: End Users/Desktop
  Intended Audience :: System Administrators
  Intended Audience :: Science/Research

  License :: OSI Approved :: BSD License

  Natural Language :: English

  Operating System :: MacOS
  Operating System :: MacOS :: MacOS 9
  Operating System :: MacOS :: MacOS X
  Operating System :: POSIX
  Operating System :: POSIX :: Linux
  Operating System :: Unix
  Operating System :: Microsoft
  Operating System :: Microsoft :: Windows
  Operating System :: Microsoft :: Windows :: Windows 10
  Operating System :: Android
  Operating System :: OS Independent

  Programming Language :: Python :: Implementation
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10

  Topic :: Internet
  Topic :: Internet :: Proxy Servers
  Topic :: Internet :: WWW/HTTP
  Topic :: Internet :: WWW/HTTP :: Browsers
  Topic :: Internet :: WWW/HTTP :: Dynamic Content
  Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries
  Topic :: Internet :: WWW/HTTP :: HTTP Servers

  Topic :: Scientific/Engineering :: Information Analysis

  Topic :: Software Development :: Debuggers
  Topic :: Software Development :: Libraries :: Python Modules

  Topic :: System :: Monitoring
  Topic :: System :: Networking
  Topic :: System :: Networking :: Firewalls
  Topic :: System :: Networking :: Monitoring

  Topic :: Utilities

  Typing :: Typed
keywords =
  http
  proxy
  http proxy server
  proxy server
  http server
  http web server
  proxy framework
  web framework
  Python3

[options]
python_requires = >= 3.6
packages = find:
include_package_data = True
zip_safe = False

# These are required in actual runtime:
install_requires =
  typing-extensions; python_version < "3.8"

[options.entry_points]
console_scripts =
  proxy = proxy:entry_point

[options.package_data]
proxy =
  py.typed

[options.packages.find]
exclude =
  tests
  tests.*
