[metadata]
name = proxy.py
version = attr: proxy.common.version.__version__
url = https://github.com/abhinavsingh/proxy.py
project_urls =
  Container Image: DockerHub = https://hub.docker.com/r/abhinavsingh/proxy.py
  Chat: Gitter = https://gitter.im/proxy.py/community
  Coverage: Codecov = https://codecov.io/github/abhinavsingh/proxy.py
  CI: GitHub = https://github.com/abhinavsingh/proxy.py/actions
  Docs: Changelog = https://proxypy.rtfd.io/en/latest/#changelog
  Docs: RTD = https://proxypy.rtfd.io/en/latest/
  Docs: Intro = https://abhinavsingh.com/proxy-py-a-lightweight-single-file-http-proxy-server-in-python/
  GitHub: discussions = https://github.com/abhinavsingh/proxy.py/discussions
  GitHub: issues = https://github.com/abhinavsingh/proxy.py/issues
  GitHub: repo = https://github.com/abhinavsingh/proxy.py
download_url = https://github.com/abhinavsingh/proxy.py/archive/master.zip
description = \u26a1 Fast \u2022 \U0001fab6 Lightweight \u2022 \U0001f51f Dependency \u2022 \U0001f50c Pluggable \u2022 \U0001f608 TLS interception \u2022 \U0001f512 DNS-over-HTTPS \u2022 \U0001f525 Poor Mans VPN \u2022 \u23ea Reverse & \u23e9 Forward \u2022 \U0001f46e\U0001f3ff Proxy Server framework \u2022 \U0001f310 Web Server framework \u2022 \u27b5 \u27b6 \u27b7 \u27a0 PubSub framework \u2022 \U0001f477 Work acceptor & executor framework.
long_description = file: README.md
long_description_content_type = text/markdown
author = Abhinav Singh
author_email = mailsforabhinav+proxy@gmail.com
license = 'BSD'
license_files =
  LICENSE.md
classifiers =
  Development Status :: 5 - Production/Stable

  Environment :: Console
  Environment :: No Input/Output (Daemon)
  Environment :: Web Environment
  Environment :: MacOS X
  Environment :: Plugins
  Environment :: Win32 (MS Windows)

  Framework :: Robot Framework
  Framework :: Robot Framework :: Library

  Intended Audience :: Developers
  Intended Audience :: Education
  Intended Audience :: End Users/Desktop
  Intended Audience :: System Administrators
  Intended Audience :: Science/Research

  License :: OSI Approved :: BSD License

  Natural Language :: English

  Operating System :: MacOS
  Operating System :: MacOS :: MacOS 9
  Operating System :: MacOS :: MacOS X
  Operating System :: POSIX
  Operating System :: POSIX :: Linux
  Operating System :: Unix
  Operating System :: Microsoft
  Operating System :: Microsoft :: Windows
  Operating System :: Microsoft :: Windows :: Windows 10
  Operating System :: Android
  Operating System :: OS Independent

  Programming Language :: Python :: Implementation
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12

  Topic :: Internet
  Topic :: Internet :: Proxy Servers
  Topic :: Internet :: WWW/HTTP
  Topic :: Internet :: WWW/HTTP :: Browsers
  Topic :: Internet :: WWW/HTTP :: Dynamic Content
  Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries
  Topic :: Internet :: WWW/HTTP :: HTTP Servers

  Topic :: Scientific/Engineering :: Information Analysis

  Topic :: Software Development :: Debuggers
  Topic :: Software Development :: Libraries :: Python Modules

  Topic :: System :: Monitoring
  Topic :: System :: Networking
  Topic :: System :: Networking :: Firewalls
  Topic :: System :: Networking :: Monitoring

  Topic :: Utilities

  Typing :: Typed
keywords =
  http
  proxy
  http proxy server
  proxy server
  http server
  http web server
  proxy framework
  web framework
  Python3

[options]
python_requires = >= 3.6
packages = find:
include_package_data = True
zip_safe = False

install_requires =

[options.extras_require]
metrics =
  prometheus_client==0.17.1; python_version < '3.8'
  prometheus_client==0.20.0; python_version >= '3.8'
release =
  setuptools-scm==6.3.2
  twine==3.8.0
tunnel =
  paramiko==2.11.0; python_version < '3.11'
  paramiko==3.4.0; python_version >= '3.11'
  types-paramiko==2.11.3; python_version < '3.11'
  types-paramiko==3.4.0.20240311; python_version >= '3.11'
  cryptography==36.0.2; python_version <= '3.6'
  cryptography==39.0.1; python_version > '3.6'
testing =
  wheel==0.37.1
  python-coveralls==2.9.3
  coverage==6.2; python_version < '3.11'
  coverage==7.4.4; python_version >= '3.11'
  flake8==4.0.1
  # pytest for Python<3.11
  pytest==7.0.1; python_version < '3.11'
  pytest-cov==3.0.0; python_version < '3.11'
  pytest-xdist==2.5.0; python_version < '3.11'
  pytest-mock==3.6.1; python_version < '3.11'
  pytest-asyncio==0.16.0; python_version < '3.11'
  # pytest for Python>=3.11
  pytest==8.1.1; python_version >= '3.11'
  pytest-cov==5.0.0; python_version >= '3.11'
  pytest-xdist==3.5.0; python_version >= '3.11'
  pytest-mock==3.14.0; python_version >= '3.11'
  pytest-asyncio==0.21.1; python_version >= '3.11'
  autopep8==1.6.0
  mypy==0.971
  py-spy==0.3.12
  tox==3.28.0; python_version < '3.11'
  tox==4.14.2; python_version >= '3.11'
  mccabe==0.6.1
  pylint==2.13.7; python_version < '3.11'
  pylint==3.1.0; python_version >= '3.11'
  rope==1.1.1
  # Required by test_http2.py
  httpx==0.22.0; python_version < '3.11'
  httpx==0.27.0; python_version >= '3.11'
  h2==4.1.0
  hpack==4.0.0
  hyperframe==6.0.1
  pre-commit==2.16.0
  # Types
  types-requests==2.28.11.5
  types-setuptools==64.0.1

[options.entry_points]
console_scripts =
  proxy = proxy:entry_point
  grout = proxy:grout

[options.package_data]
proxy =
  py.typed

[options.packages.find]
exclude =
  tests
  tests.*

[codespell]
skip = tests/http/parser/tls_server_hello.data
